@@ -43,6 +43,13 @@ DiscountCurve(params, tsQuotes, times, legparams)
       \code{s15y} \tab 15-year swap rate\cr
       \code{s20y} \tab 20-year swap rate\cr
       \code{s30y} \tab 30-year swap rate\cr
+      \code{s40y} \tab 40-year swap rate\cr
+      \code{s50y} \tab 50-year swap rate\cr
+      \code{s60y} \tab 60-year swap rate\cr
+      \code{s70y} \tab 70-year swap rate\cr
+      \code{s80y} \tab 80-year swap rate\cr
+      \code{s90y} \tab 90-year swap rate\cr
+      \code{s100y} \tab 100-year swap rate\cr
       \code{fut1}--\code{fut8} \tab 3-month futures contracts\cr
       \code{fra3x6} \tab 3x6 FRA\cr
       \code{fra6x9} \tab 6x9 FRA\cr
