@@ -1,5 +1,11 @@
 2016-05-12  Dirk Eddelbuettel  <edd@debian.org>
 
+	* src/curve.cpp     added swap tenors from 40-100 years to curve build
+	* src/discount.cpp  increased max date from 2099 to 2150
+	* man/DiscountCurve.Rmd   updated doc to reflect new tenor choices
+	
+2016-05-12  Dirk Eddelbuettel  <edd@debian.org>
+
 	* .travis.yml (script): Turn travis_wait back on
 
 2016-05-09  Terry Leitch  <tleitch1@jhu.edu>
